--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <a href="#policies" role="menuitem">Policies</a>
         <a href="#contact" role="menuitem">Contact</a>
         <div style="padding:.8rem 1.2rem;display:flex;gap:.6rem;">
-          <a class="btn btn-outline" href="mailto:AltitudeHouseConsultingLLC@gmail.com?subject=Aviation%20Rentals%20Inquiry">Email</a>
+          <a class="btn btn-outline" href="mailto:altitudehouseconsultingllc@gmail.com?subject=Aviation%20Rentals%20Inquiry">Email</a>
           <a class="btn btn-primary" href="#booking">Check Availability</a>
         </div>
       </div>
@@ -255,7 +255,7 @@
           <!-- Room 2 -->
           <article class="card" role="listitem">
             <div class="media">
-              <img loading="lazy" src="https://images.unsplash.com/photo-1505692794403-34d4982f88aa?q=80&w=1200&auto=format&fit=crop" alt="Minimalist room with natural light and workspace" />
+              <img loading="lazy" src="" alt="Minimalist room with natural light and workspace" />
             </div>
             <div class="body">
               <span class="pill">Quiet Corner</span>
@@ -287,7 +287,7 @@
         <div class="grid" role="list">
           <article class="card" role="listitem">
             <div class="media">
-              <img src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?q=80&w=1200&auto=format&fit=crop" alt="Modern kitchen with cookware and seating" />
+              <img src="" alt="Modern kitchen with cookware and seating" />
             </div>
             <div class="body">
               <span class="pill">Kitchen</span>
@@ -297,7 +297,7 @@
           </article>
           <article class="card" role="listitem">
             <div class="media">
-              <img src="https://images.unsplash.com/photo-1519710164239-da123dc03ef4?q=80&w=1200&auto=format&fit=crop" alt="Laundry machines" />
+              <img src="" alt="Laundry machines" />
             </div>
             <div class="body">
               <span class="pill">Laundry</span>
@@ -422,7 +422,7 @@
           <p class="sub">Tell us your training dates, preferred room type, and any special needs. We’ll confirm availability fast.</p>
           <div class="hero-cta" style="margin-top:.6rem;">
             <!-- TODO: Swap with your preferred booking flow (email, form, Calendly, etc.) -->
-            <a class="btn btn-primary" href="mailto:AltitudeHouseConsultingLLC@gmail.com?subject=Aviation%20Rentals%20Availability&body=Hello%20Altitude%20Aviation%20Rentals%2C%0A%0AMy%20training%20dates%20are%3A%20_____%20to%20_____.%0APreferred%20room%3A%20Standard%20%7C%20Premium%20%7C%20Either.%0AQuestions%3A%20_____%0A%0AThanks!">Email Availability Request</a>
+            <a class="btn btn-primary" href="mailto:altitudehouseconsultingllc@gmail.com?subject=Aviation%20Rentals%20Availability&body=Hello%20Altitude%20Aviation%20Rentals%2C%0A%0AMy%20training%20dates%20are%3A%20_____%20to%20_____.%0APreferred%20room%3A%20Standard%20%7C%20Premium%20%7C%20Either.%0AQuestions%3A%20_____%0A%0AThanks!">Email Availability Request</a>
             <a class="btn btn-outline" href="tel:+14075550182">Call/Text: 407‑555‑0182</a>
           </div>
         </div>
@@ -438,7 +438,7 @@
           <figure class="quote" role="listitem">
             <p>“Clean room and reliable Wi‑Fi. Perfect for early lessons — quiet and close to the airport.”</p>
             <figcaption class="avatar">
-              <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?q=80&w=256&auto=format&fit=crop" alt="Guest portrait" />
+              <img src="" alt="Guest portrait" />
               <div><div class="name">Riley P.</div><div class="role">Private pilot student</div></div>
             </figcaption>
           </figure>
