--- a/index.html
+++ b/index.html
@@ -244,12 +244,12 @@
           <!-- Room 1 -->
           <article class="card" role="listitem">
             <div class="media">
-              <img loading="lazy" src="" alt="Bright bedroom with desk and queen bed" />
+              <img loading="lazy" src="images/bella_bedroom_one.png" alt="Bedroom with desk, office chair, queen bed, and television" />
             </div>
             <div class="body">
               <span class="pill">Standard Room</span>
-              <h3>Queen Bed + Desk + Television</h3>
-              <p>Comfortable queen bed, workspace, dresser, and closet. Fresh linens and weekly common‑area cleaning.</p>
+              <h3>Queen Bed + Desk + Office Chair + Television</h3>
+              <p>Comfortable queen bed, workspace, and closet. Fresh linens and weekly common‑area cleaning.</p>
             </div>
           </article>
           <!-- Room 2 -->
