--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
           <!-- TODO: Replace with your profiles -->
           <a href="#" aria-label="Facebook">🔗</a>
           <a href="#" aria-label="Instagram">🔗</a>
-          <a href="#" aria-label="LinkedIn">🔗</a>
+          <a href="https://www.linkedin.com/company/altitudehouseconsulting?trk=public_profile_topcard-current-company" aria-label="LinkedIn">🔗</a>
         </div>
       </div>
     </footer>
