--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           <!-- Room 2 -->
           <article class="card" role="listitem">
             <div class="media">
-              <img loading="lazy" src="" alt="Minimalist room with natural light and workspace" />
+              <img loading="lazy" src="images/bella_bedroom_two.png" alt="Minimalist room with natural light and workspace" />
             </div>
             <div class="body">
               <span class="pill">Quiet Corner</span>
@@ -266,7 +266,7 @@
           <!-- Room 3 -->
           <article class="card" role="listitem">
             <div class="media">
-              <img loading="lazy" src="" alt="Cozy room with clean bedding and storage" />
+              <img loading="lazy" src="images/bella_bedroom_three.png" alt="Cozy room with clean bedding and storage" />
             </div>
             <div class="body">
               <span class="pill">Premium</span>
@@ -287,7 +287,7 @@
         <div class="grid" role="list">
           <article class="card" role="listitem">
             <div class="media">
-              <img src="" alt="Modern kitchen with cookware and seating" />
+              <img src="images/bella_kitchen.png" alt="Modern kitchen with cookware and seating" />
             </div>
             <div class="body">
               <span class="pill">Kitchen</span>
@@ -297,7 +297,7 @@
           </article>
           <article class="card" role="listitem">
             <div class="media">
-              <img src="" alt="Laundry machines" />
+              <img src="images/bella_laundry.png" alt="Laundry machines" />
             </div>
             <div class="body">
               <span class="pill">Laundry</span>
