--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           </article>
           <article class="card" role="listitem">
             <div class="media">
-              <img src="" alt="High‑speed Wi‑Fi router" />
+              <img src="https://images.unsplash.com/photo-1516321165247-4aa89a48be28?q=80&w=1221&auto=format&fit=crop" alt="High‑speed Wi‑Fi router" />
             </div>
             <div class="body">
               <span class="pill">Connectivity</span>
