--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           <!-- Room 3 -->
           <article class="card" role="listitem">
             <div class="media">
-              <img loading="lazy" src="images/bella_bedroom_three.png" alt="Cozy room with clean bedding and storage" />
+              <img loading="lazy" src="images/bella_master.png" alt="Cozy room with clean bedding and storage" />
             </div>
             <div class="body">
               <span class="pill">Premium</span>
