--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           </article>
           <article class="card" role="listitem">
             <div class="media">
-              <img src="images/bella_laundry.png" alt="Laundry machines" />
+              <img src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b3410449257rd-w1280_h960.webp" alt="Laundry machines" />
             </div>
             <div class="body">
               <span class="pill">Laundry</span>
@@ -360,7 +360,7 @@
         </div>
         <div class="gallery" id="galleryGrid">
           <figure data-cat="interior">
-            <img loading="lazy" src="" alt="Kitchen with modern appliances" />
+            <img loading="lazy" src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b1026686332rd-w1280_h960.webp" alt="Kitchen with modern appliances" />
             <figcaption>Shared kitchen — stocked & clean</figcaption>
           </figure>
           <figure data-cat="interior">
@@ -368,7 +368,7 @@
             <figcaption>Standard room — queen bed + desk</figcaption>
           </figure>
           <figure data-cat="shared">
-            <img loading="lazy" src="" alt="Living room with couch and TV" />
+            <img loading="lazy" src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b2379184233rd-w1280_h960.webp" alt="Living room with couch and TV" />
             <figcaption>Common area — quiet study hours</figcaption>
           </figure>
           <figure data-cat="neighborhood">
