--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             <figcaption>Common area — quiet study hours</figcaption>
           </figure>
           <figure data-cat="neighborhood">
-            <img loading="lazy" src="" alt="Runway with small aircraft" />
+            <img loading="lazy" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%2Fid%2FOIP.c_tQ6mnO_LrZ4K5vFT_sLAHaE8%3Fpid%3DApi&f=1&ipt=cbab818ec57f322803b9c3c763a1288c152ff400bf98733f313b59196a5d69b1&ipo=images" alt="Runway with small aircraft" />
             <figcaption>Nearby training field — short drive*</figcaption>
           </figure>
         </div>
