--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
       </div>
     </section>
 
-    <!-- ========== Featured Before/After (Room Refresh) ========== -->
+/*    <!-- ========== Featured Before/After (Room Refresh) ========== -->
     <section aria-labelledby="ba-h">
       <div class="container">
         <span class="tag">Recent upgrade</span>
@@ -345,7 +345,7 @@
         </div>
       </div>
     </section>
-
+*/
     <!-- ========== Photo Gallery (filterable) ========== -->
     <section id="gallery" aria-labelledby="gallery-h">
       <div class="container">
