--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
       </div>
     </section>
 
-/*    <!-- ========== Featured Before/After (Room Refresh) ========== -->
+<!-- /*    <!-- ========== Featured Before/After (Room Refresh) ========== -->
     <section aria-labelledby="ba-h">
       <div class="container">
         <span class="tag">Recent upgrade</span>
@@ -345,7 +345,7 @@
         </div>
       </div>
     </section>
-*/
+*/ -->
     <!-- ========== Photo Gallery (filterable) ========== -->
     <section id="gallery" aria-labelledby="gallery-h">
       <div class="container">
@@ -364,7 +364,7 @@
             <figcaption>Shared kitchen — stocked & clean</figcaption>
           </figure>
           <figure data-cat="interior">
-            <img loading="lazy" src="" alt="Room with desk and bed" />
+            <img loading="lazy" src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b4096052949rd-w1280_h960.webp" alt="Room with desk and bed" />
             <figcaption>Standard room — queen bed + desk</figcaption>
           </figure>
           <figure data-cat="shared">
