--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
           <!-- Room 1 -->
           <article class="card" role="listitem">
             <div class="media">
-              <img loading="lazy" src="images/bella_bedroom_one.png" alt="Bedroom with desk, office chair, queen bed, and television" />
+              <img loading="lazy" src="images/bella_bedroom_two.png" alt="Bedroom with desk, office chair, queen bed, and television" />
             </div>
             <div class="body">
               <span class="pill">Standard Room</span>
@@ -247,15 +247,15 @@
               <p>Comfortable queen bed, workspace, and closet. Fresh linens and weekly common‑area cleaning.</p>
             </div>
           </article>
-          <!-- Room 2 -->
+          <!-- Shared Bathroom -->
           <article class="card" role="listitem">
             <div class="media">
-              <img loading="lazy" src="images/bella_bedroom_two.png" alt="Minimalist room with natural light and workspace" />
+              <img loading="lazy" src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b889860400rd-w1280_h960.webp" alt="Clean shared bathroom" />
             </div>
             <div class="body">
               <span class="pill">Quiet Corner</span>
               <h3>Study‑Focused Layout</h3>
-              <p>lamp lighting, and office chair for late‑night ground school prep.</p>
+              <p>Rooms with shared baths are competitively priced and budget friendly.</p>
             </div>
           </article>
           <!-- Room 3 -->
@@ -282,7 +282,7 @@
         <div class="grid" role="list">
           <article class="card" role="listitem">
             <div class="media">
-              <img src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b1026686332rd-w1280_h960.webp" alt="Modern kitchen with cookware and seating" />
+              <img src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b3695456219rd-w1280_h960.webp" alt="Modern kitchen with cookware and seating" />
             </div>
             <div class="body">
               <span class="pill">Kitchen</span>
