--- a/index.html
+++ b/index.html
@@ -129,18 +129,6 @@
       @media (max-width:1000px){.grid{grid-template-columns:repeat(2,1fr)}}
       @media (max-width:620px){.grid{grid-template-columns:1fr}}
 
-      /* ===== Before/After (Room refresh or upgrade) ===== */
-      .ba-wrap{margin-top:1.8rem;display:grid;grid-template-columns:1.1fr .9fr;gap:1.4rem;align-items:center}
-      .ba-box{position:relative;border-radius:var(--radius-xl);overflow:hidden;border:1px solid var(--ink-200);box-shadow:var(--shadow-md)}
-      .ba-box img{width:100%;height:100%;object-fit:cover}
-      .ba-before{position:absolute;inset:0}
-      .ba-after{position:absolute;inset:0;clip-path:inset(0 0 0 50%)}
-      .ba-slider{position:absolute;left:0;right:0;bottom:0;padding:1rem;background:linear-gradient(180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,.35) 100%)}
-      .ba-slider input[type=range]{width:100%;accent-color:var(--brand-500)}
-      .ba-handle{position:absolute;top:0;bottom:0;left:50%;width:3px;background:#fff;box-shadow:0 0 0 1px rgba(0,0,0,.25)}
-      .ba-labels{position:absolute;inset:12px auto auto 12px;display:flex;gap:.5rem}
-      @media (max-width:900px){.ba-wrap{grid-template-columns:1fr}}
-
       /* ===== Filterable Gallery ===== */
       .filters{display:flex;gap:.5rem;flex-wrap:wrap;margin-top:1rem}
       .filter-btn{border:1px solid var(--ink-300);background:#fff;border-radius:999px;padding:.5rem .9rem;cursor:pointer;font-weight:600}
@@ -205,7 +193,7 @@
         <a href="#contact" role="menuitem">Contact</a>
         <div style="padding:.8rem 1.2rem;display:flex;gap:.6rem;">
           <a class="btn btn-outline" href="mailto:altitudehouseconsultingllc@gmail.com?subject=Aviation%20Rentals%20Inquiry">Email</a>
-          <a class="btn btn-primary" href="#booking">Check Availability</a>
+          <a class="btn btn-primary" ‪href="tel:+1‪4077921463‬‬">Check Availability</a>
         </div>
       </div>
     </header>
@@ -390,7 +378,7 @@
           <div class="hero-cta" style="margin-top:.6rem;">
             <!-- TODO: Swap with your preferred booking flow (email, form, Calendly, etc.) -->
             <a class="btn btn-primary" href="mailto:altitudehouseconsultingllc@gmail.com?subject=Aviation%20Rentals%20Availability&body=Hello%20Altitude%20Aviation%20Rentals%2C%0A%0AMy%20training%20dates%20are%3A%20_____%20to%20_____.%0APreferred%20room%3A%20Standard%20%7C%20Premium%20%7C%20Either.%0AQuestions%3A%20_____%0A%0AThanks!">Email Availability Request</a>
-            <a class="btn btn-outline" href="tel:+14075550182">Call/Text: 407‑555‑0182</a>
+            <a class="btn btn-outline" href="tel:+1‪4077921463‬">Call/Text: ‪407-792-1463‬</a>
           </div>
         </div>
       </div>
