--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
               <img loading="lazy" src="images/bella_bedroom_two.png" alt="Bedroom with desk, office chair, queen bed, and television" />
             </div>
             <div class="body">
-              <span class="pill">Standard Room</span>
+              <span class="pill">Current Standard Room Availability 2 @ 875</span>
               <h3>Queen Bed + Desk + Office Chair + Television</h3>
-              <p>Comfortable queen bed, workspace, and closet. Fresh linens and weekly common‑area cleaning.</p>
+              <p>All standard rooms come furnished with a queen bed, desk, office chair and 32inch television</p>
             </div>
           </article>
           <!-- Shared Bathroom -->
