--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
           <p class="sub">Tell us your training dates, preferred room type, and any special needs. We’ll confirm availability fast.</p>
           <div class="hero-cta" style="margin-top:.6rem;">
             <!-- TODO: Swap with your preferred booking flow (email, form, Calendly, etc.) -->
-            <a class="btn btn-primary" href="mailto:altitudehouseconsultingllc@gmail.com?subject=Aviation%20Rentals%20Availability&body=Hello%20Altitude%20Aviation%20Rentals%2C%0A%0AMy%20training%20dates%20are%3A%20_____%20to%20_____.%0APreferred%20room%3A%20Standard%20%7C%20Premium%20%7C%20Either.%0AQuestions%3A%20_____%0A%0AThanks!">Email Availability Request</a>
+            <a class="btn btn-primary" href="mailto:altitudehouseconsultingllc@gmail.com">Email Availability Request</a>
             <a class="btn btn-outline" href="tel:+1‪4077921463‬">Call/Text: ‪407-792-1463‬</a>
           </div>
         </div>
@@ -436,7 +436,7 @@
           <!-- TODO: Replace with your profiles -->
           <a href="#" aria-label="Facebook">🔗</a>
           <a href="#" aria-label="Instagram">🔗</a>
-          <a href="https://www.linkedin.com/company/altitudehouseconsulting?trk=public_profile_topcard-current-company" aria-label="LinkedIn">🔗</a>
+          <a href="https://www.linkedin.com/company/altitudehouseconsulting/" aria-label="LinkedIn">🔗</a>
         </div>
       </div>
     </footer>
