--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </nav>
         <div class="nav-cta">
           <!-- TODO: Replace phone/email with real contact info -->
-          <a class="btn btn-outline" href="mailto:altitudehouseconsultingllc@gmail.com?subject=Aviation%20Rentals%20Inquiry">Email</a>
+          <a class="btn btn-outline" href="mailto:altitudehouseconsultingllc@gmail.com">Email</a>
           <a class="btn btn-primary" href="#booking">Check Availability</a>
         </div>
         <button class="hamburger" id="hamburger" aria-controls="mobileMenu" aria-expanded="false" aria-label="Open menu">
@@ -166,7 +166,7 @@
         <a href="#policies" role="menuitem">Policies</a>
         <a href="#contact" role="menuitem">Contact</a>
         <div style="padding:.8rem 1.2rem;display:flex;gap:.6rem;">
-          <a class="btn btn-outline" href="mailto:altitudehouseconsultingllc@gmail.com?subject=Aviation%20Rentals%20Inquiry">Email</a>
+          <a class="btn btn-outline" href="mailto:altitudehouseconsultingllc@gmail.com">Email</a>
           <a class="btn btn-primary" ‪href="tel:+1‪4077921463‬‬">Check Availability</a>
         </div>
       </div>
