--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               <img loading="lazy" src="images/bella_bedroom_two.png" alt="Bedroom with desk, office chair, queen bed, and television" />
             </div>
             <div class="body">
-              <span class="pill">Current Standard Room Availability 2 @ 875</span>
+              <span class="pill">Standard Rooms Available at 875</span>
               <h3>Queen Bed + Desk + Office Chair + Television</h3>
               <p>All standard rooms come furnished with a queen bed, desk, office chair and 32inch television</p>
             </div>
@@ -254,7 +254,7 @@
           </article>
           <article class="card" role="listitem">
             <div class="media">
-              <img src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b3410449257rd-w1280_h960.webp" alt="Laundry machines" />
+              <img src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b3410449257rd-w1280_h960.webp" alt="Laundry Machines" />
             </div>
             <div class="body">
               <span class="pill">Laundry</span>
