--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
           <div class="hero-cta" style="margin-top:.6rem;">
             <!-- TODO: Swap with your preferred booking flow (email, form, Calendly, etc.) -->
             <a class="btn btn-primary" href="mailto:altitudehouseconsultingllc@gmail.com">Email Availability Request</a>
-            <a class="btn btn-outline" href="tel:+1‪4077921463‬">Call/Text: ‪407-792-1463‬</a>
+            <a class="btn btn-outline" href="tel:+1‪4077921463‬">Text: ‪(407) 792-1463‬</a>
           </div>
         </div>
       </div>
