--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             <figcaption>Common area — quiet study hours</figcaption>
           </figure>
           <figure data-cat="neighborhood">
-            <img loading="lazy" src="https://images.unsplash.com/photo-1466691623998-d607fab1ca29?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Njd8fEF2aWF0aW9ufGVufDB8fDB8fHww" alt="Runway with small aircraft" />
+            <img loading="lazy" src="https://images.unsplash.com/photo-1466691623998-d607fab1ca29?w=400&auto=format&fit=crop" alt="Runway with small aircraft" />
             <figcaption>Nearby training field — short drive*</figcaption>
           </figure>
         </div>
