--- a/index.html
+++ b/index.html
@@ -365,24 +365,24 @@
         <h2 id="testimonials-h">Trusted by trainees and instructors.</h2>
         <div class="testimonials" role="list">
           <figure class="quote" role="listitem">
-            <p>“Clean room and reliable Wi‑Fi. Perfect for early lessons — quiet and close to the airport.”</p>
+            <p>“Altitude Housing is not only affordable, but extremely accommodating.”</p>
             <figcaption class="avatar">
-              <img src="" alt="Guest portrait" />
-              <div><div class="name">Riley P.</div><div class="role">Private pilot student</div></div>
+             <img src="https://pics.craiyon.com/2024-04-12/fmIj7v6VSHayiqeJTdPUEQ.webp" alt="Guest portrait" />
+              <div><div class="name">John A.</div><div class="role">Career Pilot</div></div>
             </figcaption>
           </figure>
           <figure class="quote" role="listitem">
-            <p>“Month‑to‑month made it easy during my instrument training. Quiet hours respected.”</p>
+            <p>“I recommend altitude housing accommodations with highest regards.”</p>
             <figcaption class="avatar">
-              <img src="" alt="Guest portrait" />
-              <div><div class="name">Morgan S.</div><div class="role">Instrument rating</div></div>
+              <img src="https://pics.craiyon.com/2023-10-14/f0b29d35a3854ef8b2ed659ae9342a05.webp" alt="Guest portrait" />
+              <div><div class="name">Wes C.</div><div class="role">Aviator Parent</div></div>
             </figcaption>
           </figure>
           <figure class="quote" role="listitem">
-            <p>“Straightforward, responsive, and professional. Would stay again for checkride prep.”</p>
+            <p>“Good deal, never had any problems, maintenance requests were attended to promptly, everything included, great choice for students”</p>
             <figcaption class="avatar">
-              <img src="" alt="Guest portrait" />
-              <div><div class="name">Jamie L.</div><div class="role">CFI candidate</div></div>
+              <img src="https://c8.alamy.com/comp/DAEDR3/old-fashioned-male-aviator-portrait-close-up-DAEDR3.jpg" alt="Guest portrait" />
+              <div><div class="name">Drew C.</div><div class="role">U.S. Marine Multi-Engine License</div></div>
             </figcaption>
           </figure>
         </div>
