--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
               <img loading="lazy" src="images/bella_bedroom_two.png" alt="Bedroom with desk, office chair, queen bed, and television" />
             </div>
             <div class="body">
-              <span class="pill">Standard Rooms Available at 875</span>
+              <span class="pill">Standard Rooms Currently Available at 875</span>
               <h3>Queen Bed + Desk + Office Chair + Television</h3>
-              <p>All standard rooms come furnished with a queen bed, desk, office chair and 32inch television</p>
+              <p>All standard rooms come furnished with a queen bed, desk, office chair and 32 inch television</p>
             </div>
           </article>
           <!-- Shared Bathroom -->
@@ -223,7 +223,7 @@
           <!-- Room 3 -->
           <article class="card" role="listitem">
             <div class="media">
-              <img loading="lazy" src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b2972599051rd-w1280_h960.webp" alt="Cozy room with clean bedding and storage" />
+              <img loading="lazy" src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b2972599051rd-w1280_h960.webp" alt="Cozy room with storage" />
             </div>
             <div class="body">
               <span class="pill">Premium</span>
@@ -331,8 +331,8 @@
           <article class="card" role="listitem">
             <div class="body">
               <span class="pill">House Rules</span>
-              <h3>Respect & Quiet Hours</h3>
-              <p>We prioritize clean, quiet spaces conducive to study and early flight schedules.</p>
+              <h3>Courtesy is Respect</h3>
+              <p>Cohabitation requires collaboration. House rules and policies are posted. Treat others as you wish to be treated.</p>
             </div>
           </article>
         </div>
@@ -350,7 +350,6 @@
           <h2 id="booking-h">Ready to book or ask a question?</h2>
           <p class="sub">Tell us your training dates, preferred room type, and any special needs. We’ll confirm availability fast.</p>
           <div class="hero-cta" style="margin-top:.6rem;">
-            <!-- TODO: Swap with your preferred booking flow (email, form, Calendly, etc.) -->
             <a class="btn btn-primary" href="mailto:altitudehouseconsultingllc@gmail.com">Email Availability Request</a>
             <a class="btn btn-outline" href="tel:+1‪4077921463‬">Text: ‪(407) 792-1463‬</a>
           </div>
