--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             <div class="body">
               <span class="pill">House Rules</span>
               <h3>Courtesy is Respect</h3>
-              <p>Cohabitation requires collaboration. House rules and policies are posted. Treat others as you wish to be treated.</p>
+              <p>Cohabitation requires collaboration. House policies are posted. Zero tolerance for drugs, alcohol, violence.</p>
             </div>
           </article>
         </div>
