--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
           <p class="sub">Tell us your training dates, preferred room type, and any special needs. We’ll confirm availability fast.</p>
           <div class="hero-cta" style="margin-top:.6rem;">
             <a class="btn btn-primary" href="mailto:altitudehouseconsultingllc@gmail.com">Email Availability Request</a>
-            <a class="btn btn-outline" href="tel:+1‪4077921463‬">Text: ‪(407) 792-1463‬</a>
+            <a class="btn btn-outline" href="tel:+14077921463">Text: (407) 792-1463</a>
           </div>
         </div>
       </div>
