--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <a href="#contact" role="menuitem">Contact</a>
         <div style="padding:.8rem 1.2rem;display:flex;gap:.6rem;">
           <a class="btn btn-outline" href="mailto:altitudehouseconsultingllc@gmail.com">Email</a>
-          <a class="btn btn-primary" ‪href="tel:+1‪4077921463‬‬">Check Availability</a>
+          <a class="btn btn-primary" href="tel:+14077921463">Check Availability</a>
         </div>
       </div>
     </header>
