--- a/index.html
+++ b/index.html
@@ -280,13 +280,15 @@
       <div class="container">
         <span class="tag">Photo gallery</span>
         <h2 id="gallery-h">Spaces, amenities, and nearby aviation.</h2>
-        <p class="sub">Filter to see interiors, shared areas, or neighborhood scenes near training airports.</p>
+        <p class="sub">Pictures of Property.</p>
+        <!--
         <div class="filters" role="toolbar" aria-label="Gallery filters">
           <button class="filter-btn" data-filter="all" aria-pressed="true">All</button>
           <button class="filter-btn" data-filter="interior">Interiors</button>
           <button class="filter-btn" data-filter="shared">Shared Areas</button>
           <button class="filter-btn" data-filter="neighborhood">Nearby</button>
         </div>
+        -->
         <div class="gallery" id="galleryGrid">
           <figure data-cat="interior">
             <img loading="lazy" src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b1026686332rd-w1280_h960.webp" alt="Kitchen with modern appliances" />
