--- a/index.html
+++ b/index.html
@@ -319,17 +319,17 @@
           </figure>
           <figure data-cat="shared">
             <img loading="lazy" src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b268882365rd-w1280_h960.webp" alt="Living room with couch and TV" />
-            <figcaption>Common area — quiet study hours</figcaption>
+            <figcaption>Furnished common area</figcaption>
           </figure>
 
           <figure data-cat="shared">
             <img loading="lazy" src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b3906379371rd-w1280_h960.webp" alt="Arial" />
-            <figcaption>Common area — quiet study hours</figcaption>
+            <figcaption>Private backyard with water view</figcaption>
           </figure>
 
           <figure data-cat="shared">
             <img loading="lazy" src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b4003861424rd-w1280_h960.webp" alt="Arial" />
-            <figcaption>Common area — quiet study hours</figcaption>
+            <figcaption>Quiet safe neigborhood</figcaption>
           </figure>  
           
           <figure data-cat="neighborhood">
