--- a/index.html
+++ b/index.html
@@ -307,16 +307,18 @@
 
           <figure data-cat="exterior">
             <img loading="lazy" src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b2427276856rd-w1280_h960.webp" alt="Water view" />
-            <figcaption>Shared kitchen — stocked & clean</figcaption>
+            <figcaption>Private and quiet backyard</figcaption>
           </figure>
+          
           <figure data-cat="interior">
             <img loading="lazy" src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b295879837rd-w1280_h960.webp" alt="Room with desk and bed" />
-            <figcaption>Standard room — queen bed + desk</figcaption>
+            <figcaption>Master suite with furnished with queen bed + desk + office chair</figcaption>
           </figure>
           <figure data-cat="shared">
             <img loading="lazy" src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b1454774073rd-w1280_h960.webp" alt="Shared dining" />
-            <figcaption>Common area — quiet study hours</figcaption>
+            <figcaption>Dining Room</figcaption>
           </figure>
+          
           <figure data-cat="shared">
             <img loading="lazy" src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b268882365rd-w1280_h960.webp" alt="Living room with couch and TV" />
             <figcaption>Furnished common area</figcaption>
