--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="hero-stats" role="list" aria-label="Key stats">
           <div class="stat" role="listitem"><div class="num"><strong>10 min</strong></div><div class="lbl">Avg. drive to training airports*</div></div>
           <div class="stat" role="listitem"><div class="num"><strong>$850–$950</strong></div><div class="lbl">Typical monthly rate (all in)</div></div>
-          <div class="stat" role="listitem"><div class="num"><strong>Wi‑Fi 300+ Mbps</strong></div><div class="lbl">Fast & stable internet</div></div>
+          <div class="stat" role="listitem"><div class="num"><strong>Wi‑Fi 500+ Mbps, Fiber Available</strong></div><div class="lbl">Fast & stable internet</div></div>
         </div>
         <!-- * TODO: Update with your true drive times and nearby airports (e.g., KSFB, etc.) -->
       </div>
