--- a/index.html
+++ b/index.html
@@ -335,9 +335,19 @@
           </figure>  
           
           <figure data-cat="neighborhood">
-            <img loading="lazy" src="https://images.unsplash.com/photo-1466691623998-d607fab1ca29?w=400&auto=format&fit=crop" alt="Runway with small aircraft" />
+            <img loading="lazy" src="https://images.unsplash.com/photo-1466691623998-d607fab1ca29?w=400&auto=format&fit=crop" alt="Arial" />
             <figcaption>Nearby training field — short drive*</figcaption>
           </figure>
+
+
+          <figure data-cat="services">
+            <img loading="lazy" src="https://images.unsplash.com/photo-1585421514284-efb74c2b69ba?w=400&auto=format&fit=crop" alt="Cleaning" />
+            <figcaption>Cleaning semimonthly rent conscessions at manager discretion</figcaption>
+          </figure>
+
+
+
+          
         </div>
       </div>
     </section>
