--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               <img loading="lazy" src="images/bella_bedroom_two.png" alt="Bedroom with desk, office chair, queen bed, and television" />
             </div>
             <div class="body">
-              <span class="pill">Standard Rooms Currently Available at 875</span>
+              <span class="pill">Standard Rooms Currently Available 2</span>
               <h3>Queen Bed + Desk + Office Chair + Television</h3>
               <p>All standard rooms come furnished with a queen bed, desk, office chair and 32 inch television</p>
             </div>
