--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
               <img loading="lazy" src="https://ap.rdcpix.com/2a8fcf36ea7776fbb1786657171f3c81l-b889860400rd-w1280_h960.webp" alt="Clean shared bathroom" />
             </div>
             <div class="body">
-              <span class="pill">Quiet Corner</span>
-              <h3>Study‑Focused Layout</h3>
+              <span class="pill">Bathroom</span>
+              <h3>Shared Layout</h3>
               <p>Rooms with shared baths are competitively priced and budget friendly.</p>
             </div>
           </article>
@@ -228,7 +228,7 @@
             <div class="body">
               <span class="pill">Premium</span>
               <h3>Extra Space</h3>
-              <p>Master suite with private bath</p>
+              <p>Master suite with private bath, contact for availability</p>
             </div>
           </article>
         </div>
