--- a/index.html
+++ b/index.html
@@ -182,13 +182,21 @@
           <a class="btn btn-primary" href="#booking">Check Availability</a>
           <a class="btn btn-outline" href="#gallery">See the Spaces</a>
         </div>
-        <div class="hero-stats" role="list" aria-label="Key stats">
-          <div class="stat" role="listitem"><div class="num"><strong>10 min</strong></div><div class="lbl">Avg. drive to training airports*</div></div>
-          <div class="stat" role="listitem"><div class="num"><strong>$850–$950</strong></div><div class="lbl">Typical monthly rate (all in)</div></div>
-          <div class="stat" role="listitem"><div class="num"><strong>Wi‑Fi 500+ Mbps, Fiber Available</strong></div><div class="lbl">Fast & stable internet</div></div>
-        </div>
-        <!-- * TODO: Update with your true drive times and nearby airports (e.g., KSFB, etc.) -->
-      </div>
+<div class="hero-stats" role="list" aria-label="Key stats">
+  <div class="stat" role="listitem">
+    <div class="num"><strong>10 min</strong></div>
+    <div class="lbl">Typical drive to Sanford Intl (SFB)</div>
+  </div>
+  <div class="stat" role="listitem">
+    <div class="num"><strong>$875 / $950</strong></div>
+    <div class="lbl">Shared bath / Private bath</div>
+  </div>
+  <div class="stat" role="listitem">
+    <div class="num"><strong>$300 deposit</strong></div>
+    <div class="lbl">30-day notice • Insurance ≥ $100k</div>
+  </div>
+</div>
+
     </section>
 
     <!-- ========== Rooms (Cards) ========== -->
