--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             <div class="body">
               <span class="pill">House Rules</span>
               <h3>Courtesy is Respect</h3>
-              <p>Cohabitation requires collaboration. House policies are posted. Zero tolerance for drugs, alcohol, violence.</p>
+              <p>Cohabitation requires collaboration. House policies are posted at residence. Zero tolerance for drugs, alcohol, violence.</p>
             </div>
           </article>
         </div>
