--- a/index.html
+++ b/index.html
@@ -536,12 +536,15 @@
             <small>Serving: Central Florida training airports • © <span id="year"></span></small>
           </p>
         </div>
+       <!--
         <div class="socials" aria-label="Social links">
-          <!-- TODO: Replace with your profiles -->
+           TODO: Replace with your profiles 
           <a href="#" aria-label="Facebook">🔗</a>
           <a href="#" aria-label="Instagram">🔗</a>
           <a href="https://www.linkedin.com/company/altitudehouseconsulting/" aria-label="LinkedIn">🔗</a>
+        
         </div>
+        -->
       </div>
     </footer>
 
