--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <span></span><span></span><span></span>
         </button>
       </div>
-      <!-- Mobile menu -->
+      <!-- Mobile menu 
       <div id="mobileMenu" class="container" role="menu" aria-label="Mobile">
         <a href="#rooms" role="menuitem">Rooms</a>
         <a href="#amenities" role="menuitem">Amenities</a>
@@ -171,7 +171,8 @@
           <a class="btn btn-outline" href="mailto:altitudehouseconsultingllc@gmail.com">Email</a>
           <a class="btn btn-primary" href="tel:+14077921463">Check Availability</a>
         </div>
-      </div>
+       </div>
+      -->
     </header>
 
     <!-- ========== Hero ========== -->
@@ -195,10 +196,9 @@
   </div>
   <div class="stat" role="listitem">
     <div class="num"><strong>$300 deposit</strong></div>
-    <div class="lbl">30-day notice • Insurance ≥ $100k</div>
+    <div class="lbl">30-day notice • Renters Insurance $100k in liability required</div>
   </div>
 </div>
-
     </section>
 
     <!-- ========== Cost Comparison Analysis ========== -->
@@ -234,6 +234,7 @@
           <ul style="margin:0;padding-left:1.2rem;">
             <li>Shared Bath Room: $875</li>
             <li>Master Suite: $950</li>
+            <li>Renters Insurance: $6 (est)</li>
             <li>Utilities + Wi-Fi: Included</li>
             <li>Semi-monthly Cleaning: Included</li>
           </ul>
