--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
      <a
   class="btn btn-outline"
   id="reviewsLink"
-  href="https://share.google/9NamVXmRlUSH14gX9"
+  href="https://www.google.com/search?q=altitude+house+consulting+llc"
   target="_blank"
   rel="noopener"
 >
